[package]
name = "memdev"
version = "0.1.0"
edition = "2021"

[dependencies]
udev = "0.9.*"
serde = {version = "1.*.*", features = [ "derive" ], optional = true}
thiserror = "2.*.*"

[lints.clippy]
pedantic = {level="warn", priority = 0}
must_use_candidate = {level="allow", priority = 1}
unwrap_used = {level="warn", priority = 3}
stable_sort_primitive = {level = "allow", priority = 2}
